--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.url=jdbc:mysql://ada.mysql.uhserver.com:3306/ada
 spring.datasource.username=adacarlos
 spring.datasource.password=C@rloshs19
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.jpa.show-sql: true
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
