--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://ada.mysql.uhserver.com:3306/ada
+spring.datasource.url=jdbc:mysql://ada.mysql.uhserver.com:3306/ada?characterEncoding=UTF-8
 spring.datasource.username=adacarlos
 spring.datasource.password=C@rloshs19
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
